# meeting_bot

./: .dockerignore  .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  states.py  templates.py
.github/workflows/: deploy.yml
handlers/: add.py  application.py  clear.py  member_joined.py  service_messages.py  video_chat_events.py
keyboards/: application.py
middlewares/: commands.py
models/: application.py  command_message.py  invite_link.py  manager.py  member.py  video_chat_attendance.py
repositories/: application_repository.py  command_message_repository.py  invite_link_repository.py  manager_repository.py  member_repository.py  statistics_repository.py  video_chat_attendance_repository.py
scripts/: create_announcement.py  create_user_session.py  test_video_chat.py
services/: command_message_service.py  invite_link_service.py  statistics_service.py  video_chat_service.py
tests/: conftest.py
tests/repositories/: test_application_repository.py  test_command_message_repository.py  test_invite_link_repository.py  test_manager_repository.py  test_member_repository.py  test_statistics_repository.py  test_vido_chat_attendance_repository.py
tests/services/: test_command_message_service.py  test_invite_link_service.py  test_statistics_service.py
tests/tepmplates/: test_statistics_templates.py
tests/utils/: formatters.py  validators.py
utils/: formatters.py  time.py  validators.py
workers/: broker.py  scheduler.py
workers/tasks/: __init__.py  cleanup_group.py  schedule_video_chat.py  send_application_button.py  (+2 more)
