[project]
name = "meeting-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "colorlog>=6.10.1",
    "phonenumbers>=9.0.21",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyrofork>=2.3.69",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.1",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.1",
    "tgcrypto>=1.2.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"      # pytest-asyncio не требует декоратор @pytest.mark.asyncio
testpaths = ["tests"]      # где искать тесты
filterwarnings = [
    "ignore::DeprecationWarning",
]


[tool.ruff]
target-version = "py313"   # версия Python
line-length = 100          # максимальная длина строки

[tool.mypy]
python_version = "3.13"
strict = true

[project.scripts]
meeting-bot = "meeting_bot.__main__:main"
